# esp32-crid

./: .gitignore  CMakeLists.txt  README.md
.codebuddy/memory/: 2026-06-01.md  2026-06-03.md  MEMORY.md
.github/workflows/: build_and_release.yml
archive/: README.md  RemoteID_Scanner.c  ridscanner-usb.c
components/opendroneid/: CMakeLists.txt  opendroneid.c  wifi.c
main_rx/: CMakeLists.txt  crid_display.c  crid_display.h  crid_json.c  crid_parser.c  crid_parser.h  crid_rx_types.h  crid_scan_main.c  crid_sniffer.c  crid_tracker.c
main_tx/: crid_messages.c  crid_messages.h
tools/: json_monitor.py
